# fractrade-executor

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: index.md  usage.md
examples/: simple_executor.py
src/fractrade_executor/: __init__.py  cli.py  executor.py
tests/: test_integration.py
